--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,7 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
