Updated description and gradle file.

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ repositories {
     jcenter()
 }
 
+compileJava { 
+  options.encoding = "UTF-8" 
+}
+
 dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
     compile group: 'junit', name: 'junit', version: '4.12'
