Trying UTF-8 encoding.

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ repositories {
     jcenter()
 }
 
+tasks.withType(Compile) {
+    options.encoding = "UTF-8"
+}
+
 compileJava { 
-  options.encoding = "UTF-8" 
+    options.encoding = "UTF-8" 
 }
 
 dependencies {
