--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'eclipse'
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 compileJava { 
@@ -10,11 +11,7 @@ compileJava {
 }
 
 dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
-    compile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'junit:junit:4.12'
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
+    implementation 'org.slf4j:slf4j-api:1.7.21'
+    implementation 'junit:junit:4.12'
+    testImplementation  'junit:junit:4.12'
 }
